--- a/Client/index.html
+++ b/Client/index.html
@@ -55,7 +55,11 @@
         instead of mixing complementary products. This strategy 
         makes sense in the beauty industry where customers regularly 
         need to stock up on favorite products.</p></div> 
-       
+        <form>
+          <label for="first name">Enter First Name</label>
+          <label type="first name" name="first name">
+          <input type="text" name="text">
+         </form>
          
         <form>
           <label for="email"> Enter Email Id </label>
